--- a/schedule.html
+++ b/schedule.html
@@ -200,16 +200,16 @@
         <td></td>
       </tr>
       <tr><td>12/3 </td>
-        <td>Guest Lecture: TBD</td>
+        <td>No lecture</td>
         <td></td>
-        <td></td>
+        <td>Extended office hours, instructors will be available to assist with Lab 3 and Homework 6</td>
       </tr>
       <tr class="table-warning"><td>12/5 </td>
         <td>Final review</td>
         <td></td>
         <td></td>
       </tr>      
-      <tr class="table-danger"><td>TBD </td>
+      <tr class="table-danger"><td>12/9 </td>
         <td>Final exam</td>
         <td></td>
         <td></td>
