--- a/assignments.html
+++ b/assignments.html
@@ -99,6 +99,12 @@
             <td><a href="homework/05-webauth.pdf">[pdf]</a></td>
             <td><a href="homework/05-webauth.zip">[zip]</a></td>
           </tr>       
+          <tr>
+            <td>6: Trusting trust</td>
+            <td>12/6</td>
+            <td><a href="homework/06-pki.pdf">[pdf]</a></td>
+            <td><a href="homework/06-pki.zip">[zip]</a></td>
+          </tr>       
         </tbody>
       </table></div><p><p>
       <br>
@@ -129,7 +135,7 @@
             <td><a href="labs/lab2-handout.zip">[zip]</a></td>
           </tr>
           <tr>
-            <td>2: Break it</td>
+            <td>3: Break it</td>
             <td>12/6</td>
             <td><a href="labs/lab3-handout.pdf">[pdf]</a></td>
           </tr>
